--- a/src/shared/style/global.css
+++ b/src/shared/style/global.css
@@ -1,14 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Dynalight&family=Lovers+Quarrel&family=Poppins:wght@600&family=Raleway:wght@300;400&display=swap");
 
-
-
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+html,
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 }
 
 .display-4 {
@@ -20,8 +18,16 @@ html,body
 	text-align: center;
 }
 
-
-
 .container {
-	background-color: rgb(136, 77, 77);
+	background-color: rgb(255, 255, 255);
+	padding: 100px;
+}
+
+.accordionStyle p {
+	color: black !important;
+	align-items: center;
+}
+
+p {
+	color: "blue";
 }
