--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -4,7 +4,7 @@
 
 .lead {
 	font-family: "Poppins", sans-serif;
-	color: white;
+	color: rgb(0, 0, 0);
 	font-size: 12px;
 	font-weight: 100;
 	text-align: center;
@@ -39,10 +39,12 @@ label {
 	color: white;
 }
 
-
-
-p {
-	color: white !important;
+.aboutUs {
+	color: rgb(0, 0, 0) !important;
 	font-family: "Raleway", sans-serif;
-
+	text-align: justify;
+	padding: 20px;
 }
+
+.cleanImage{
+position: relative;}
