--- a/src/pages/ContactPage/Contact.css
+++ b/src/pages/ContactPage/Contact.css
@@ -6,7 +6,7 @@
 
 .lead {
 	font-family: "Poppins", sans-serif;
-	color: white;
+	color: rgb(0, 0, 0);
 	font-size: 12px;
 	font-weight: 100;
 	text-align: center;
@@ -33,5 +33,9 @@ form {
 	margin: 0px;
 	padding: 10px;
 	color: black;
+	font-family: "Raleway", sans-serif;
+}
+p {
+	color: rgb(0, 0, 0) !important;
 	font-family: "Raleway", sans-serif;
 }
