--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -1,5 +1,9 @@
-
-
-
-
-
+.icons {
+	padding: 10px;
+	font-size: 15px;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+}
