--- a/src/pages/ContactPage/Contact.css
+++ b/src/pages/ContactPage/Contact.css
@@ -13,12 +13,10 @@
 }
 
 .contactBox {
-	padding: 20px;
 	align-items: center;
 	text-align: center;
 	border-radius: 0rem;
 	font-size: 12px;
-	padding: 20px;
 	background-color: #ffffffbe;
 	box-shadow: 0 0 5px #0000005e;
 	color: white;
@@ -30,7 +28,8 @@ form {
 }
 
 .contactInfo {
-	margin: 0px;
+	margin-top: 100px;
+	text-align: center;
 	padding: 10px;
 	color: black;
 	font-family: "Raleway", sans-serif;
