--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -7,3 +7,15 @@
 	text-decoration: none;
 	color: white;
 }
+
+
+
+
+width: 100%;
+	background-color: #313131;
+	color: rgb(255, 255, 255);
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	position: relative;
+	z-index: 2;
