--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -8,14 +8,29 @@
 	color: white;
 }
 
+.buttonNavTab {
+	background-color: #ddda08;
+	padding: 20px;
+	margin: 30px 83px 100px 86px;
+	border-radius: 30px;
+	color: #fff;
+	font-weight: 600;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	transition: all 200ms ease;
+	cursor: pointer;
+	box-shadow: 0 4px 20px 0 rgba(61, 71, 82, 0.1), 0 0 0 0 rgba(0, 127, 255, 0);
+	border: none;
+	text-decoration: none;
+}
 
+.buttonNavTab:hover {
+	background-color: #ddda0881;
+}
 
-
-width: 100%;
-	background-color: #313131;
-	color: rgb(255, 255, 255);
-	text-align: center;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	position: relative;
-	z-index: 2;
+.MuiListItemIcon-root {
+	color: rgba(0, 0, 0, 0.54);
+	display: inline-flex;
+	min-width: 40px !important;
+	flex-shrink: 0;
+}
