--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,21 @@
 .home {
-    min-height: 100vh;
-    background-color: #ffffffea;
-    display: flex;justify-content: space-around;
-    padding: 20px;
+	min-height: 100vh;
+	background-color: #ffffffea;
+	display: flex;
+	justify-content: space-around;
+	padding: 20px;
+}
+
+.MuiContainer-root {
+	width: 100%;
+	display: block;
+	box-sizing: border-box;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
+}
+
+.contactInfo {
+	background-color: #ddda0881;
 }
