--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -1,26 +1,17 @@
-.icons {
-	padding: 10px;
-	font-size: 15px;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	text-decoration: none;
-	color: white;
-}
-
 .buttonNavTab {
-	background-color: #ddda08;
-	padding: 20px;
+	border-style: solid;
+	border-color: #f7d514;
+	background-color: rgb(255, 255, 255);
+	padding: 15px;
 	margin: 30px 83px 100px 86px;
 	border-radius: 30px;
-	color: #fff;
+	color: rgb(88, 88, 88);
 	font-weight: 600;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	transition: all 200ms ease;
 	cursor: pointer;
 	box-shadow: 0 4px 20px 0 rgba(61, 71, 82, 0.1), 0 0 0 0 rgba(0, 127, 255, 0);
-	border: none;
 	text-decoration: none;
 }
 
