--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -26,7 +26,52 @@
 	flex-shrink: 0;
 }
 
-/* .MuiSvgIcon-root {
-	position: absolute;
-	left: 220px;
-} */
+.MuiSvgIcon-root {
+	color: black;
+}
+
+.MuiAppBar-colorPrimary {
+	color: rgb(51, 51, 51);
+	background-color: #ffffff !important;
+}
+
+.MuiButton-label {
+	/* padding-left: 20px; */
+	width: 100%;
+	display: inherit;
+	align-items: inherit;
+	justify-content: inherit;
+	color: rgb(53, 53, 53);
+}
+
+.MuiButton-label:hover {
+	color: rgb(255, 255, 255);
+}
+
+.MuiButton-containedPrimary {
+	color: #fff;
+	background-color: #fbfbfd !important;
+}
+
+.MuiButton-containedPrimary:hover {
+	color: #fff;
+	background-color: #a7a7f5 !important;
+
+}
+
+.MuiButton-root {
+	color: rgba(0, 0, 0, 0.87);
+	padding: 6px 16px;
+	font-size: 0.875rem;
+	min-width: 64px;
+	box-sizing: border-box;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+		border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+	font-weight: 500;
+	line-height: 1.75;
+	border-radius: 0px !important;
+	letter-spacing: 0.02857em;
+	text-transform: uppercase;
+}
