--- a/src/pages/ServicesPage/services.css
+++ b/src/pages/ServicesPage/services.css
@@ -6,7 +6,6 @@ img {
 	color: black;
 }
 
-
 .contactBox {
 	padding: 20px;
 	align-items: center;
@@ -17,4 +16,12 @@ img {
 	background-color: #ffffffbe;
 	box-shadow: 0 0 5px #0000005e;
 	color: white;
+}
+
+.logo {
+	width: 50px;
+	height: 50px;
+	position: relative;
+	left: 50%;
+	/* transform: -50%; */
 }
