--- a/src/pages/ServicesPage/services.css
+++ b/src/pages/ServicesPage/services.css
@@ -22,6 +22,17 @@ img {
 	width: 50px;
 	height: 50px;
 	position: relative;
-	left: 50%;
+	left: 48%;
 	/* transform: -50%; */
+}
+
+
+@media screen and (max-width: 600px) {
+	.logo {
+		width: 50px;
+	height: 50px;
+	position: relative;
+	left: 42%;
+	/* transform: -50%; */
+	}
 }
