--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -87,3 +87,14 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+.css-19sicoy-MuiGrid-root {
+	text-align: center !important;
+}
+
+.anchorCenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
