--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -48,3 +48,20 @@ label {
 
 .paperContainer {
 }
+
+.logoBottom {
+	display: block !important;
+	margin-left: auto !important;
+	margin-right: auto !important;
+	width: 10% !important;
+}
+
+@media screen and (max-width: 600px) {
+	.logoBottom {
+		display: block !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
+		width: 10% !important;
+		/* transform: -50%; */
+	}
+}
