--- a/src/pages/ServicesPage/services.css
+++ b/src/pages/ServicesPage/services.css
@@ -18,21 +18,19 @@ img {
 	color: white;
 }
 
-.logo {
-	width: 50px;
-	height: 50px;
-	position: relative;
-	left: 48%;
-	/* transform: -50%; */
+.logoBottom {
+	display: block !important;
+	margin-left: auto !important;
+	margin-right: auto !important;
+	width: 10% !important;
 }
 
-
 @media screen and (max-width: 600px) {
-	.logo {
-		width: 50px;
-	height: 50px;
-	position: relative;
-	left: 44%;
-	/* transform: -50%; */
+	.logoBottom {
+		display: block !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
+		width: 10% !important;
+		/* transform: -50%; */
 	}
 }
