--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -20,6 +20,7 @@
 	display: block !important;
 	margin-left: auto !important;
 	margin-right: auto !important;
+	padding: 0px !important;
 }
 
 @media screen and (max-width: 600px) {
@@ -30,3 +31,5 @@
 		/* transform: -50%; */
 	}
 }
+
+
