--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -122,4 +122,11 @@ MuiIconButton-edgeStart {
 	margin-right: -20px !important;
 }
 
+.menuButtonCall {
+	display: block !important;
+	padding-left: 40px;
+	background-color: red;
+	position: relative !important;
+	left: 20px !important;
 
+}
