--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -106,13 +106,6 @@ MuiIconButton-edgeStart {
 	margin-left: 0px !important;
 }
 
-.logo {
-	height: 100px !important;
-	width: 200px !important;
-	align-items: "center" !important;
-	margin-top: 0px !important;
-}
-
 @media screen and (max-width: 600px) {
 	.anchorCenter {
 		padding-right: 0px;
@@ -131,9 +124,22 @@ MuiIconButton-edgeStart {
 	left: 10px !important;
 }
 
-.MuiToolbar-gutters {
-	padding-left: 24px;
-	padding-right: 24px;
-	padding-top: 10px !important;
-	padding-bottom: 10px !important;
+
+.logo {
+	height: 80px !important;
+	width: 180px !important;
+	align-items: "center" !important;
+	margin-top: 0px !important;
+	display: block !important;
+	margin-left: auto !important;
+	margin-right: auto !important;
+	padding: 0px !important;
+}
+
+@media screen and (max-width: 600px) {
+	.logo {
+		display: block !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
+	}
 }
