--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -15,3 +15,25 @@
 	padding-left: 0px !important;
 	padding-right: 0px !important;
 }
+
+.covid {
+	text-align: center;
+	font-family: "Poppins", sans-serif;
+	margin: auto;
+	padding: 20px;
+}
+
+.block {
+	height: 300px;
+	width: 300px;
+	border-style: solid;
+	margin: auto;
+	font-size: large;
+	display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+.css-i4bv87-MuiSvgIcon-root {
+	font-size: 5rem !important;
+	margin-top: 20px;
+}
