--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -16,7 +16,7 @@
 	padding-right: 0px !important;
 }
 
-.covid {
+.howItWorksContainer {
 	text-align: center;
 	font-family: "Poppins", sans-serif;
 	margin: auto;
@@ -24,16 +24,21 @@
 }
 
 .block {
-	height: 300px;
+	height: 350px;
 	width: 300px;
 	border-style: solid;
 	margin: auto;
 	font-size: large;
 	display: block;
-    margin-left: auto;
-    margin-right: auto }
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .css-i4bv87-MuiSvgIcon-root {
 	font-size: 5rem !important;
 	margin-top: 20px;
+}
+
+.covid {
+	color: red !important;
 }
