--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -34,6 +34,17 @@
 	margin-right: auto;
 }
 
+.bloc2k {
+	height: 350px;
+	width: 400px;
+	margin: auto;
+	font-size: large;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: center;
+}
+
 .css-i4bv87-MuiSvgIcon-root {
 	font-size: 5rem !important;
 	margin-top: 20px;
