--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -24,25 +24,29 @@
 }
 
 .block {
-	height: 350px;
-	width: 300px;
-	border-style: solid;
-	margin: auto;
-	font-size: large;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.bloc2k {
-	height: 350px;
+	height: 430px;
 	width: 400px;
 	margin: auto;
 	font-size: large;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	box-shadow: 0 0 5px #0000005e;
+}
+
+.bloc2k {
+	height: 100%;
+	width: 100%;
+	margin: auto;
+	font-size: large;
+	display: block;
+
 	justify-content: center;
+	font-family: "Raleway", sans-serif;
+	color: rgb(59, 59, 59);
+	text-align: center;
+	background-color: #44ac3b;
+	display: inline-block;
 }
 
 .css-i4bv87-MuiSvgIcon-root {
@@ -52,4 +56,14 @@
 
 .covid {
 	color: red !important;
+	font-size: 20px;
+}
+
+.notes {
+	font-size: 10px;
+}
+
+h1 {
+	font-size: 4rem;
+	color: rgb(0, 0, 0);
 }
