--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -40,7 +40,8 @@
 	margin: auto;
 	font-size: large;
 	display: block;
-
+	margin-left: auto;
+	margin-right: auto;
 	justify-content: center;
 	font-family: "Raleway", sans-serif;
 	color: rgb(59, 59, 59);
@@ -65,5 +66,5 @@
 
 h1 {
 	font-size: 4rem;
-	color: rgb(0, 0, 0);
+	color: rgb(255, 251, 251);
 }
