--- a/src/pages/HomePage/components/Carousel/Carousel.css
+++ b/src/pages/HomePage/components/Carousel/Carousel.css
@@ -4,6 +4,14 @@
 	background-color: black;
 }
 
+@media screen and (max-width: 600px) {
+	.carousel {
+		width: 100%;
+		height: 350px;
+		background-color: black;
+	}
+}
+
 .carouselInner {
 	height: 100%;
 	width: 100%;
@@ -32,7 +40,6 @@
 	text-align: justify;
 	text-align-last: center;
 }
-
 
 .carouselInner .right {
 	flex: 5%;
