--- a/src/pages/ContactPage/Contact.css
+++ b/src/pages/ContactPage/Contact.css
@@ -27,7 +27,6 @@ form {
 	padding: 20px;
 }
 
-
 p {
 	color: rgb(0, 0, 0) !important;
 	font-family: "Raleway", sans-serif;
@@ -48,4 +47,20 @@ p {
 		width: 10% !important;
 		/* transform: -50%; */
 	}
+}
+
+.contactInfo {
+	height: 100%;
+	width: 100%;
+	margin: auto;
+	font-size: large;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: center;
+	font-family: "Raleway", sans-serif;
+	color: rgb(255, 255, 255);
+	text-align: center;
+	display: inline-block;
+	background-color: #9bb399;
 }
