--- a/src/pages/ServicesPage/services.css
+++ b/src/pages/ServicesPage/services.css
@@ -4,8 +4,7 @@ img {
 
 .AccordionStyle {
 	color: black;
-	align-items: center
-	
+	align-items: center;
 }
 
 .contactBox {
@@ -36,3 +35,4 @@ img {
 		/* transform: -50%; */
 	}
 }
+
