--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -35,12 +35,7 @@ label {
 	color: white;
 }
 
-.aboutUs {
-	color: rgb(0, 0, 0) !important;
-	font-family: "Raleway", sans-serif;
-	text-align: justify;
-	padding: 20px;
-}
+
 
 .paperContainer {
 }
@@ -62,7 +57,7 @@ label {
 	}
 }
 
-.contactInfo {
+/* .contactInfo {
 	height: 100%;
 	width: 100%;
 	margin: auto;
@@ -76,4 +71,4 @@ label {
 	text-align: center;
 	display: inline-block;
 	background-color: #1ef00b;
-}
+} */
