--- a/src/shared/components/Footer/Footer.css
+++ b/src/shared/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footerInfo {
 	width: 100%;
-	background-color: #313131;
+	background-color: #262B52;
 	color: rgb(255, 255, 255);
 	text-align: center;
 	padding-top: 10px;
