--- a/src/pages/ContactPage/Contact.css
+++ b/src/pages/ContactPage/Contact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Dynalight&family=Lovers+Quarrel&family=Poppins:wght@600&family=Raleway:wght@300;400&display=swap");
 
 #spanTitle {
-	color: #1a237e;
+	color: #262B52;
 }
 
 .lead {
@@ -30,6 +30,8 @@ form {
 p {
 	color: rgb(0, 0, 0) !important;
 	font-family: "Raleway", sans-serif;
+	text-align: justify;
+	padding: 10px;
 }
 
 .logoBottom {
@@ -48,4 +50,3 @@ p {
 		/* transform: -50%; */
 	}
 }
-
