--- a/src/pages/ServicesPage/services.css
+++ b/src/pages/ServicesPage/services.css
@@ -36,3 +36,13 @@ img {
 	}
 }
 
+.css-h93ljk-MuiTypography-root {
+	margin: 0;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+	font-weight: 400;
+	font-size: 1.5rem;
+	line-height: 1.334;
+	letter-spacing: 0em;
+	margin-bottom: 0.35em;
+text-align: center;
+}
