--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -84,13 +84,13 @@
 .MuiToolbar-gutters {
 	padding-left: 24px;
 	padding-right: 24px;
-	padding-top: 20px;
+	padding-top: 10px;
 	padding-bottom: 20px;
 }
 
 @media screen and (max-width: 600px) {
 	.MuiToolbar-gutters {
-		padding-bottom: 40px;
+		padding-bottom: 30px;
 	}
 }
 
@@ -114,7 +114,7 @@ MuiIconButton-edgeStart {
 
 @media screen and (max-width: 600px) {
 	.anchorCenter {
-		padding-right: 0px;
+		/* padding-right: 0px; */
 	}
 }
 
@@ -131,11 +131,11 @@ MuiIconButton-edgeStart {
 }
 
 .logo {
-	height: 87px !important;
-	width: 140px !important;
-	align-items: "center" !important;
+	height: 96.8px !important;
+	width: 150.5px !important;
+	/* align-items: "center" !important; */
 	margin-top: 0px !important;
-	display: block !important;
+	/* display: block !important; */
 	margin-left: auto !important;
 	margin-right: auto !important;
 	padding-right: 10px !important;
