--- a/src/shared/components/Footer/Footer.css
+++ b/src/shared/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footerInfo {
 	width: 100%;
-	background-color: #262B52;
+	background-color: #262b52;
 	color: rgb(255, 255, 255);
 	text-align: center;
 	padding-top: 10px;
@@ -62,5 +62,5 @@
 	height: 30px;
 	text-align: center;
 	text-decoration: none;
-	color: white;
+	color: white !important;
 }
