--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -42,6 +42,10 @@
 	align-items: inherit;
 	justify-content: inherit;
 	color: rgb(53, 53, 53);
+	padding: 0px;
+	margin: 0px;
+	position: absolute;
+	top: 50px;
 }
 
 .MuiButton-label:hover {
