--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -138,7 +138,7 @@ MuiIconButton-edgeStart {
 	/* display: block !important; */
 	margin-left: auto !important;
 	margin-right: auto !important;
-	padding-right: 10px !important;
+	/* padding-right: 10px !important; */
 }
 
 @media screen and (max-width: 600px) {
