--- a/src/shared/components/NavTabs/NavTabs.css
+++ b/src/shared/components/NavTabs/NavTabs.css
@@ -165,7 +165,7 @@ MuiIconButton-edgeStart {
 .makeStyles-desktopBtn-5 {
 	width: 540px !important;
 	position: relative;
-	top: -60px;
+	/* top: -60px; */
 }
 
 .css-mhc70k-MuiGrid-root > .MuiGrid-item {
