--- a/src/pages/FaqsPage/Accordion.css
+++ b/src/pages/FaqsPage/Accordion.css
@@ -1,6 +1,5 @@
 .questionsTitle {
 	font-weight: bold !important;
 	text-align: left !important;
-	padding-right: 100px !important;
-	/* color: red !important; */
+	max-width: 80% !important;;
 }
