--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -14,6 +14,7 @@
 	margin-right: auto;
 	padding-left: 0px !important;
 	padding-right: 0px !important;
+	background-color: white;
 }
 
 .howItWorksContainer {
